--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
       <div>
         <section id="about">
-            <h2>About</h2>
+            <h1>About</h1>
                 <p>
                 Hello!
                 <br>
@@ -33,7 +33,7 @@
                 </p>
         </section>
         <section id="gallery">
-            <h2>Gallery</h2>
+            <h1>Gallery</h1>
             <p>
                 Here are some highlights of my work.
                 The locations and year are in the caption. 
@@ -105,11 +105,11 @@
                     <p class="desc">Wyoming 2021</p>
                 </div>
             </div>
-       
+        </div>
         </section>
       </div>
       <section id="contact">
-        <h2>Contact</h2>
+        <h1>Contact</h1>
         <p>
         Please fill out this form and I’ll connect with you soon.
         </p>
@@ -120,7 +120,7 @@
               <label for="mail">E-mail Address</label>
               <input type="text" id="mail" name="e-mail" placeholder="Enter your email adress">
               <label for="message">Message</label>
-              <textarea placeholder="What can I help you with?" style="height: 200px"></textarea>
+              <textarea type="text" placeholder="What can I help you with?" style="height: 200px"></textarea>
               <input type="submit" value="Send">
             </form>
           </div>
